<resources>
    <string name="app_name">The future guy</string>
    <string name="title_activity_menu">The future guy</string>
    <string name="butStartFastTest">Get the name quickly</string>
    <string name="butStartFullTest">Get the name exactly</string>
    <string name="butStartAnotherTest">Another test</string>
    <string name="butStartVoting">New version 2.0!!</string>
    <string name="butExit">Exit</string>
    <string name="imageViewDescription">The future guy</string>
    <string name="textViewQuestionCountOfQuestions">of</string>
    <string name="textViewDialogBeforeTestYes">Yes, I\'m ready \n To start the test!</string>
    <string name="textViewDialogBeforeTestNo">No, I don\'t want</string>
    <string name="textViewDialogBeforeTestText">\n Based jn the answers the program will likely inform the name of your future boyfriend. \n Are you ready to answer honestly to all the questions?</string>
    <string name="textViewDialogAfterTestText">\n The test results are received, analyzed and the result is ready. \n To show the name of your future boyfriend?</string>
    <string name="textViewQuestionFinish">Finish</string>
    <string name="textViewQuestionBack"><![CDATA[< Back]]></string>
    <string name="textViewQuestionSkip"><![CDATA[Skip >]]></string>
    <string name="answer1_2">11-14 year</string>
    <string name="answer10_1">yes, a lot</string>
    <string name="answer10_2">yes, but few</string>
    <string name="answer10_3">no, they don\'t</string>
    <string name="answer11_1">believe</string>
    <string name="answer34_3">no, younger me</string>
    <string name="textViewAgain">Repeat</string>
    <string name="answer11_2">not very</string>
    <string name="answer11_3">don\'t believe it</string>
    <string name="answer12_1">often</string>
    <string name="answer12_2">not very often</string>
    <string name="answer12_3">rarely smile</string>
    <string name="answer13_1">very like</string>
    <string name="answer13_2">yes, I like it</string>
    <string name="answer13_3">I don\'t like</string>
    <string name="answer14_1">yes</string>
    <string name="answer14_2">not very</string>
    <string name="answer14_3">no</string>
    <string name="answer15_1">I above peers</string>
    <string name="answer15_2">like everyone else</string>
    <string name="answer15_3">a little lower than I want</string>
    <string name="answer16_1">yes, very long</string>
    <string name="answer16_2">average</string>
    <string name="answer16_3">short hairstyle</string>
    <string name="answer17_1">yes, I love to buy something</string>
    <string name="answer17_2">not very</string>
    <string name="answer17_3">don\'t like</string>
    <string name="answer18_1">rose</string>
    <string name="answer18_2">chamomile</string>
    <string name="answer18_3">violets</string>
    <string name="answer19_1">red</string>
    <string name="answer19_2">green</string>
    <string name="answer19_3">blue</string>
    <string name="answer1_1">under 11 years</string>
    <string name="answer1_3">more than 14 years</string>
    <string name="answer20_1">pink</string>
    <string name="answer20_2">purple</string>
    <string name="answer20_3">azure</string>
    <string name="answer21_1">yes, keep looking</string>
    <string name="answer21_2">sometimes I look</string>
    <string name="answer21_3">don\'t like</string>
    <string name="answer22_1">yes, you can</string>
    <string name="answer22_2">no, you can\'t</string>
    <string name="answer22_3">don\'t know</string>
    <string name="answer23_1">very soon</string>
    <string name="answer23_2">in the near future</string>
    <string name="answer23_3">I don\'t know yet</string>
    <string name="answer24_1">fun</string>
    <string name="answer24_2">serious</string>
    <string name="answer24_3">thoughtful</string>
    <string name="answer25_1">rich</string>
    <string name="answer25_2">beautiful</string>
    <string name="answer25_3">and rich, and beautiful</string>
    <string name="answer26_1">of course will be</string>
    <string name="answer26_2">it doesn\'t matter</string>
    <string name="answer26_3">he will have the bike</string>
    <string name="answer27_1">short</string>
    <string name="answer27_2">long</string>
    <string name="answer27_3">average</string>
    <string name="answer28_1">straight hair</string>
    <string name="answer28_2">wavy hair</string>
    <string name="answer28_3">curly hair</string>
    <string name="answer29_1">tall and slender</string>
    <string name="answer29_2">average height</string>
    <string name="answer29_3">not high</string>
    <string name="answer2_1">more vowels</string>
    <string name="answer2_2">more consonants</string>
    <string name="answer2_3">equally</string>
    <string name="answer30_1">light</string>
    <string name="answer30_2">dark</string>
    <string name="answer30_3">not bright and not dark</string>
    <string name="answer31_1">blue</string>
    <string name="answer31_2">green</string>
    <string name="answer31_3">brown</string>
    <string name="answer32_1">I go all the time</string>
    <string name="answer32_2">sometimes</string>
    <string name="answer32_3">don\'t like</string>
    <string name="answer33_1">it will be very romantic</string>
    <string name="answer33_2">no, it will be serious</string>
    <string name="answer33_3">don\'t know</string>
    <string name="answer34_1">he will be older than me</string>
    <string name="answer34_2">my age</string>
    <string name="answer35_1">bright and stylish</string>
    <string name="answer35_2">business</string>
    <string name="answer35_3">don\'t know</string>
    <string name="answer3_1">light</string>
    <string name="answer3_2">dark</string>
    <string name="answer3_3">other</string>
    <string name="answer4_1">well</string>
    <string name="answer4_2">not very</string>
    <string name="answer4_3">bad</string>
    <string name="answer5_1">fun</string>
    <string name="answer5_2">sad</string>
    <string name="answer5_3">nothing</string>
    <string name="answer6_1">yes, often</string>
    <string name="answer6_2">yes, but rarely</string>
    <string name="answer6_3">don\'t use</string>
    <string name="answer7_1">yes, easy</string>
    <string name="answer7_2">can, but I won\'t</string>
    <string name="answer7_3">can\'t</string>
    <string name="answer8_1">a lot of walking</string>
    <string name="answer8_2">yes, but not a lot</string>
    <string name="answer8_3">don\'t like</string>
    <string name="answer9_1">very like</string>
    <string name="answer9_2">love, but eat little</string>
    <string name="answer9_3">don\'t like</string>
    <string name="question1">How old are you?</string>
    <string name="question10">Do you do any sports?</string>
    <string name="question11">Do you believe in divination?</string>
    <string name="question12">Smile often?</string>
    <string name="question13">Like to travel?</string>
    <string name="question14">Likes to ride in the car?</string>
    <string name="question15">Do you think you\'re high?</string>
    <string name="question16">You have long hair?</string>
    <string name="question17">Do you like shopping?</string>
    <string name="question18">What flowers do you like most?</string>
    <string name="question19">Which of these colors is the most beautiful?</string>
    <string name="question2">In your name with more vowels or consonants?</string>
    <string name="question20">Which of these colors is the most pleasant?</string>
    <string name="question21">Like to watch shows about fashion?</string>
    <string name="question22">Your future can be changed?</string>
    <string name="question23">When you have a boyfriend?</string>
    <string name="question24">Your future boyfriend will be..</string>
    <string name="question25">Your future boyfriend will be..</string>
    <string name="question26">Your future boyfriend will have his own car?</string>
    <string name="question27">What hair is your future boyfriend?</string>
    <string name="question28">What hair is your future boyfriend?</string>
    <string name="question29">Your future boyfriend will be..</string>
    <string name="question3">What colour is your hair?</string>
    <string name="question30">What color are your eyes?</string>
    <string name="question31">What color eyes will your future boyfriend</string>
    <string name="question32">You love going to the movies?</string>
    <string name="question33">Your future boyfriend be romantic?</string>
    <string name="question34">Your future boyfriend will be older than you?</string>
    <string name="question35">How to dress your future boyfriend?</string>
    <string name="question4">Are you good in school?</string>
    <string name="question5">What is your mood right now?</string>
    <string name="question6">Do you use cosmetics?</string>
    <string name="question7">You can talk to a guy first?</string>
    <string name="question8">Do you like to walk?</string>
    <string name="question9">You like to eat sweets?</string>
    <string name="result1">Alex</string>
    <string name="result2">Max</string>
    <string name="result3">John</string>
    <string name="result4">Arthur</string>
    <string name="result5">Nick</string>
    <string name="result6">Damon</string>
    <string name="result7">George </string>
    <string name="result8">Dan</string>
    <string name="result9">Mick</string>
    <string name="result10">Andy</string>
    <string name="result11">Alex</string>
    <string name="result12">Elihu </string>
    <string name="result13">Vlad</string>
    <string name="result14">Mark</string>
    <string name="result15">Serg</string>
    <string name="result16">Roman </string>
    <string name="result17">Bobby</string>
    <string name="result18">Tim</string>
    <string name="result19">Matt</string>
    <string name="result20">Nick</string>
    <string name="result21">Paul</string>
    <string name="result22">Sam</string>
    <string name="result23">Den</string>
    <string name="result24">Steve</string>
    <string name="result25">Theo</string>
    <string name="result26">Dan</string>
    <string name="result27">Anthony</string>
    <string name="result28">Gleb </string>
    <string name="result29">Yaroslav </string>
    <string name="result30">Simon</string>
    <string name="result31">Greg</string>
    <string name="result32">George </string>
    <string name="result33">Eugene</string>
    <string name="result34">Tim</string>
    <string name="result35">Rouslan </string>
    <string name="result36">Peter</string>
    <string name="result37">Vencel</string>
    <string name="result38">Vadim</string>
    <string name="result39">Basil</string>
    <string name="result40">Oleg</string>
    <string name="result41">Vic</string>
    <string name="result42">George</string>
    <string name="result43">Arthur</string>
    <string name="result44">Leonid </string>
    <string name="result45">Dave</string>
    <string name="result46">Cyril</string>
    <string name="result47">Leo</string>
    <string name="result48">Conny </string>
    <string name="result49">Arthur</string>
    <string name="result50">George</string>
    <string name="result1Text">Responsive, patient, proud.</string>
    <string name="result2Text">Sensitive, responsive, patient.</string>
    <string name="textViewDialogAfterTestNo">No, I want to take the test again</string>
    <string name="textViewDialogAfterTestYes">Show name</string>
    <string name="RateForApp">If you like the app - rate it or write a comment</string>
    <string name="textViewDialogBeforeVotingText">Take part in the creation of a second improved version of the test! On the basis of the wishes of the most dedicated and active participants, we will create a second improved version! Your opinion is very important to us! Become the author of the new apps!</string>
    <string name="textViewDialogBeforeVotingYes">Want to vote for a new app!</string>
</resources>