<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.kev163rus.thefutureguy.MenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:background="@drawable/background1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/textViewLogo"
            android:layout_weight="40"
            android:textColor="@android:color/white"
            android:textSize="60sp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/butStartFastTest"
            android:id="@+id/textViewStartFastTest"
            android:layout_weight="10"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/butStartFullTest"
            android:id="@+id/textViewStartFullTest"
            android:layout_weight="10"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/butExit"
            android:id="@+id/textViewExit"
            android:layout_weight="10"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/butStartAnotherTest"
            android:id="@+id/textViewStartAddTest"
            android:layout_weight="10"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/imageViewTwoHeart"
            android:layout_weight="10"
            android:src="@drawable/twoheart1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/imageViewDescription" />
    </LinearLayout>

</RelativeLayout>
