<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.kev163rus.thefutureguy.RateAppActivity"
    android:background="@drawable/background1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/textViewRateApp"
            android:layout_weight="15"
            android:textSize="40sp"
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/RateForApp"
            android:id="@+id/textViewRateAppText"
            android:layout_weight="40"
            android:textSize="30sp"
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:numStars="5"
            android:rating="4.5"
            android:clickable="true"
            style="?android:attr/ratingBarStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/textViewAgain"
            android:id="@+id/textViewAgain"
            android:layout_weight="15"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/butExit"
            android:id="@+id/textViewExit"
            android:layout_weight="10"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:gravity="center" />

    </LinearLayout>


</RelativeLayout>
